2005-02-07  Jakub Jelinek  <jakub@redhat.com>

	* specific.c (pthread_key_delete): If pthread_create has not been
	called yet, clear p_specific for the current thread.
	* Makefile (tests): Add tst-tsd1.
	* tst-tsd1.c: New test.

2005-01-08  Andreas Jaeger  <aj@suse.de>

	* pthread.c (init_one_static_tls): Adjust initialization of DTV
	entry for static tls deallocation fix.

	* sysdeps/alpha/tls.h (dtv_t): Change pointer type to be struct which
	also contains information whether the memory pointed to is static
	TLS or not, include <stdbool.h>.
	* sysdeps/i386/tls.h: Likewise.
	* sysdeps/ia64/tls.h: Likewise.
	* sysdeps/powerpc/tls.h: Likewise.
	* sysdeps/s390/tls.h: Likewise.
	* sysdeps/sh/tls.h: Likewise.
	* sysdeps/sparc/tls.h: Likewise.
	* sysdeps/x86_64/tls.h: Likewise.

2004-12-21  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (tests): Add tst-align.
	* tst-align.c: New test.
	* sysdeps/i386/Makefile (CFLAGS-tst-align.c): Add
	-mpreferred-stack-boundary=4.

2004-12-12  Ulrich Drepper  <drepper@redhat.com>

	* internals.h: Include <stdbool.h> to match includes used in nptl.

2004-12-01  Jakub Jelinek  <jakub@redhat.coM.

	* sysdeps/unix/sysv/linux/bits/posix_opt.h (_POSIX_CPUTIME,
	_POSIX_THREAD_CPUTIME): Define to 0.
	* sysdeps/pthread/timer_create.c (timer_create): Remove unused code
	handling CLOCK_PROCESS_CPUTIME_ID and CLOCK_THREAD_CPUTIME_ID.
	* sysdeps/pthread/timer_routines.c (__timer_signal_thread_pclk,
	__timer_signal_thread_tclk): Remove.
	(init_module): Remove their initialization.
	(thread_cleanup): Remove their cleanup assertions.
	* sysdeps/pthread/posix-timer.h (__timer_signal_thread_pclk,
	__timer_signal_thread_tclk): Remove.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Removed.
	* sysdeps/unix/sysv/linux/ia64/bits/posix_opt.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/bits/posix_opt.h: Removed.
	* tst-clock1.c (do_test): Check for availability of CPU clock.

2004-11-18  Daniel Jacobowitz  <dan@codesourcery.com>
