@@ -1,14 +1,29 @@
-# awk script for shlib-versions.v.i -> soversions.i; see Makeconfig.
+# awk script for shlib-versions.v -> soversions.i; see Makeconfig.
 
-# Only lines matching `config' (set with -v) are relevant to us.
-config !~ $1 { next }
+BEGIN {
+  config = cpu "-" vendor "-" os;
+  configs[config] = "DEFAULT";
+}
+
+{ thiscf = $1 }
+
+$2 ~ /WORDSIZE[3264]/ {
+  if (config ~ thiscf) {
+    othercf = $3;
+    sub(/@CPU@/, cpu, othercf);
+    sub(/@VENDOR@/, vendor, othercf);
+    sub(/@OS@/, os, othercf);
+    configs[othercf] = $2;
+  }
+  next;
+}
 
 # Obey the first matching DEFAULT line.
 $2 == "DEFAULT" {
-  if (!matched_default) {
-    matched_default = 1;
+  if (!matched_default[thiscf]) {
+    matched_default[thiscf] = 1;
     $1 = $2 = "";
-    default_setname = $0;
+    default_set[thiscf] = $0;
   }
   next
 }
@@ -19,20 +34,33 @@ $2 == "DEFAULT" {
   lib = number = $2;
   sub(/=.*$/, "", lib);
   sub(/^.*=/, "", number);
-  if (lib in numbers) next;
-  numbers[lib] = number;
+  if ((thiscf FS lib) in numbers) next;
+  numbers[thiscf FS lib] = number;
+  order[thiscf FS lib] = ++order_n;
   if (NF > 2) {
     $1 = $2 = "";
-    versions[lib] = $0
+    versions[thiscf FS lib] = $0
   }
 }
 
 END {
-  for (lib in numbers) {
-    set = (lib in versions) ? versions[lib] : default_setname;
-    if (set)
-      print lib, numbers[lib], set;
-    else
-      print lib, numbers[lib];
+  for (elt in numbers) {
+    split(elt, x);
+    cf = x[1];
+    lib = x[2];
+    if (default_setname && !(cf in default_set) && config ~ cf)
+      default_set[cf] = default_setname;
+    set = (elt in versions) ? versions[elt] : default_set[cf];
+    line = set ? (lib FS numbers[elt] FS set) : (lib FS numbers[elt]);
+    for (c in configs)
+      if (c ~ cf) {
+	if (!((c FS lib) in lineorder) || order[elt] < lineorder[c FS lib]) {
+	  lineorder[c FS lib] = order[elt];
+	  lines[c FS lib] = configs[c] FS line;
+	}
+      }
+  }
+  for (c in lines) {
+    print lines[c]
   }
 }
