@@ -1,3 +1,8 @@
+2005-02-09  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* descr.h (__pthread_find_self, thread_self): Mark as pure
+	instead of const.
+
 2005-02-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* specific.c (pthread_key_delete): If pthread_create has not been
